kubernetes/booking-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-db
spec:
  selector:
    app: booking-db
  ports:
    - port: 5432
      targetPort: 5432
