kubernetes/booking-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-service
spec:
  selector:
    app: booking-service
  ports:
    - port: 5003
      targetPort: 5003
