kubernetes/deployment-service-booking.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: onlineeventbooking-muhammadawais
spec:
  replicas: 2
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service
          image: booking-service:latest
          ports:
            - containerPort: 5003
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: onlineeventbooking-muhammadawais
spec:
  selector:
    app: booking-service
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003
  type: ClusterIP
