kubernetes/event-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-service
spec:
  selector:
    app: event-service
  ports:
    - port: 5000
      targetPort: 5000
